@@ -494,6 +494,7 @@ enum FuncCode
 	LFUN_TOOLBAR_SET,               // spitz 20201217
 	// 385
 	LFUN_INSET_SPLIT,               // jspitzm 20201222
+	LFUN_LYXFILES_OPEN,             // jspitzm 20210210
 	LFUN_LASTACTION                 // end of the table
 };
 
